[gd_scene load_steps=4 format=2]

[ext_resource path="res://Autoloads/SlowMotionManager.gd" type="Script" id=1]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform float intensity : hint_range(0.0, 1.0) = 0.0;

void fragment() {
    vec2 uv = SCREEN_UV;
    vec2 center = vec2(0.5, 0.5);
    vec2 dist = uv - center;
    
    // Simple chromatic aberration
    float aberration = 0.01 * intensity;
    vec4 color;
    color.r = texture(SCREEN_TEXTURE, uv - dist * aberration).r;
    color.g = texture(SCREEN_TEXTURE, uv).g;
    color.b = texture(SCREEN_TEXTURE, uv + dist * aberration).b;
    color.a = 1.0;
    
    // Simple vignette
    float vignette = smoothstep(0.8, 0.0, length(dist) * (1.0 + intensity));
    color.rgb = mix(color.rgb, color.rgb * vignette, 0.5 * intensity);
    
    COLOR = color;
}
"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/intensity = 0.0

[node name="SlowMotionManager" type="Node"]
script = ExtResource( 1 )

[node name="EffectTween" type="Tween" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 10

[node name="VisualEffect" type="ColorRect" parent="CanvasLayer"]
material = SubResource( 2 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
